--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "engines": {
-    "node": ">=0.10.5"
+    "node": "20.x.x"
   },
   "devDependencies": {
     "@material-ui/core": "4.9.12",
@@ -24,33 +24,44 @@
     "@types/lodash.throttle": "4.1.6",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
+    "@types/redux-immutable": "3.0.43",
+    "@types/react-redux": "5.0.28",
     "@types/react-router-dom": "5.1.5",
     "@types/react-select": "3.0.12",
     "@types/socket.io": "2.1.3",
     "@types/socket.io-client": "1.4.32",
     "@types/styled-components": "4.0.3",
-    "@connexta/ace": "git+https://github.com/andrewkfiedler/ace.git#b9e2d582cee8b1e60be015785ec7ec01d4f12b68",
+    "@types/traverse": "0.6.37",
+    "@types/validator": "13.12.2",
+    "@connexta/ace": "git+https://github.com/connexta/ace.git#37a0052298d788aff5836551a4d578a758ea3575",
     "@connexta/eslint-config-connexta": "git+https://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
+    "autoprefixer": "10.4.20",
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
     "express": "4.17.1",
+    "immutable": "3.8.2",
     "json": "9.0.6",
     "lodash.debounce": "4.0.8",
     "notistack": "0.9.11",
+    "postcss-focus-visible": "8.0.2",
     "querystring": "0.2.0",
     "react": "16.13.1",
+    "react-ace": "4.4.0",
     "react-dom": "16.13.1",
     "react-select": "3.1.0",
+    "react-redux": "5.1.1",
     "react-router-dom": "5.1.2",
-    "react-redux": "6.0.0",
-    "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
+    "redux": "3.7.2",
+    "redux-immutable": "3.1.0",
+    "redux-thunk": "2.4.2",
     "rimraf": "3.0.0",
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
     "styled-components": "5.1.0",
+    "tailwindcss": "3.4.17",
     "ts-node": "8.3.0",
-    "url": "0.11.0"
+    "url": "0.11.0",
+    "validator": "13.12.0"
   },
   "peerDependencies": {
     "@material-ui/core": ">=4",
@@ -58,21 +69,26 @@
     "@material-ui/lab": "4.0.0-alpha.51",
     "@material-ui/pickers": ">=3",
     "notistack": ">=0",
+    "postcss-focus-visible": ">=8",
     "react": ">=16",
     "react-dom": ">=16",
     "react-select": ">=3",
     "react-router-dom": ">=5",
-    "styled-components": ">=5"
+    "styled-components": ">=5",
+    "tailwindcss": ">=3"
   },
   "dependencies": {
+    "autoprefixer": ">=10",
     "dropzone": "5.5.1",
     "formik": "2.3.3",
     "fuse.js": "3.4.5",
+    "golden-layout": "1.5.9",
     "iframe-resizer": "4.1.1",
     "lodash.throttle": "4.1.1",
     "@connexta/logviewer": "git+https://github.com/connexta/logviewer.git#c55ba445e875d3aa99afc8aa9cbec0037c787fa3",
     "prop-types": "15.7.2",
     "scroll-into-view-if-needed": "2.2.20",
+    "traverse": "0.6.11",
     "yup": "1.4.0"
   },
   "scripts": {
